fix some spacing in the data bar

--- a/styles/_data-bar.sass
+++ b/styles/_data-bar.sass
@@ -36,7 +36,7 @@
         top: 20px
         color: #FFF
         opacity: .25
-        font-size: 130px
+        font-size: 133px
       &.temperature
         width: 29%
         .icon
@@ -62,6 +62,9 @@
         width: 20%
         .icon
           right: 15%
+        h3
+          display: inline-block
+          margin-top: -5px
       &.location
         width: 14%
         .icon
@@ -83,8 +86,8 @@
           font-weight: normal
           font-size: 90px
           .decimal
-            font-size: 45px
-            line-height: 62px
+            font-size: 50px
+            line-height: 65px
             position: absolute
       .label
         font-family: 'DINPro Light'
